--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "php": ">=7.0",
     "doctrine/dbal": "2.5.*",
     "symfony/console": "3.4.*",
-    "symfony/translation": "3.4.*"
+    "symfony/translation": "3.4.*",
+    "symfony/filesystem": "3.4.*"
   },
   "require-dev": {
     "phpunit/phpunit": "6.4.*",
