--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "doctrine/dbal": "2.5.*",
     "symfony/console": "3.4.*",
     "symfony/translation": "3.4.*",
-    "symfony/filesystem": "3.4.*"
+    "symfony/filesystem": "3.4.*",
+    "monolog/monolog": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "6.4.*",
