--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
   "require-dev": {
     "phpunit/phpunit": "6.4.*",
     "friendsofphp/php-cs-fixer": "2.*",
-    "phpstan/phpstan": "^0.9.2"
+    "phpstan/phpstan": "0.9.*"
   },
   "autoload": {
     "psr-4": {
